# camera_imu_ros

./: .gitignore  CMakeLists.txt  README.md  main.cpp  orbbecConfig.cmake.in  package.xml
config/: camera_calibration.txt  camera_imu_for_vins_mono.yaml
include/: camera_imu_utils.h  imu_filter.h  orbbec.h  orbbec.hpp  util.h
include/h/: context.h  device.h  frame.h  internal.h  option.h  orbbec_advanced_mode_command.h  orbbec_context.h  orbbec_device.h  orbbec_frame.h  orbbec_internal.h  orbbec_option.h  orbbec_pipeline.h  orbbec_processing.h  orbbec_record_playback.h  orbbec_types.h  pipeline.h  processing.h  record_playback.h  sensor.h
include/hpp/: context.hpp  device.hpp  frame.hpp  internal.hpp  orbbec_context.hpp  orbbec_device.hpp  orbbec_frame.hpp  orbbec_internal.hpp  orbbec_pipeline.hpp  orbbec_processing.hpp  orbbec_record_playback.hpp  orbbec_sensor.hpp  orbbec_types.hpp  pipeline.hpp  processing.hpp  record_playback.hpp  sensor.hpp  types.hpp
script/: bag2asl.py
src/: archive.h  backend.cpp  backend.h  camera_imu_utils.cpp  camera_utils.cpp  concurrency.h  environment.h  imu.cpp  imu_filter.cpp  types.cpp  types.h
src/core/: advanced_mode.h  debug.h  extension.h  info.h  motion.h  options.h  processing.h  roi.h  serialization.h  streaming.h  video.h
src/libuvc/: libuvc.cpp
src/linux/: backend_v4l2.cpp  backend_v4l2.h
